--- a/projects/project_2_3/wechat-example/img2img/pages/index/index.wxml
+++ b/projects/project_2_3/wechat-example/img2img/pages/index/index.wxml
@@ -1,13 +1,9 @@
 <view class="container">
-  <view class="page_img2img">
-    <view class="upload-button" bind:tap="chooseAndUploadImage">
-      <image wx:if="{{imgUpload}}" src="{{imgUpload}}" mode="aspectFit" style="width: 500rpx;height: 500rpx;" />
-      <view wx:else>+</view>
-    </view>
+  <view class="page_txt2img">
+    <button bind:tap="uploadImage" type="primary">上传照片</button>
   </view>
-  <view class="img_box" wx:if="{{imgReturns}}">
-    <image src="{{baseUrl}}/images/{{imgReturns}}" mode="aspectFill" style="width: 614rpx;height: 345rpx;margin-bottom: 32px;" />
-    <button bind:tap="downloadPic" type="primary" style="margin-bottom: 16px;">下载图片</button>
+  <view class="img_box" wx:if="{{filename}}">
+    <image src="{{baseUrl}}/api/view?filename={{filename}}" mode="aspectFill" style="width: 300px;height: 300px;margin-bottom: 16px;" />
     <button bind:tap="replay" type="primary">重新生成</button>
   </view>
 </view>
